--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/349237427_549338440737447_3233973161607432203_n.jpg?stp=dst-jpg_s552x414&_nc_cat=110&ccb=1-7&_nc_sid=aee45a&_nc_ohc=ga6mYkEhiZwAX-gKRd7&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdSC2kMIQOCfKMh_LEGLcv4lsEYT5kBvJuGZ69K5qAgXSg&oe=649C1FE1" class="card-img-top" alt="...">
+                <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/350354348_211459295048474_4713822545429181369_n.jpg?stp=dst-jpg_p320x320&_nc_cat=110&ccb=1-7&_nc_sid=aee45a&_nc_ohc=_uza2lrbchIAX8IbqMp&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdSqmY05qDEJr8n-paP9RjUFUWCGC92fkHk5AsWgO8x11w&oe=649E25EF" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Ozone</h5>
                   <p class="card-text">台灣選秀「原子少年」人氣團出道的組合。</p>
@@ -90,7 +90,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/350354326_590186936275301_1269526915154796525_n.jpg?stp=dst-jpg_s552x414&_nc_cat=103&ccb=1-7&_nc_sid=aee45a&_nc_ohc=pxUsow7mMrAAX9sx1Om&_nc_oc=AQnTWv2g59GnrkshPBVQ74MKkZQ54ymVoAAGt7as5xSJ37Ik0rEXh17NEXcWvWjDi2ZK6PYlhdMDaCGKe7DJ7ipo&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdQmeMDvsAlKdT875H9Cnnj3KcQpD3Vd-oi8wIA9tJpdng&oe=649C1CEE" class="card-img-top" alt="...">
+                <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/350274548_241712571798749_5388421452373851983_n.jpg?stp=dst-jpg_p320x320&_nc_cat=101&ccb=1-7&_nc_sid=aee45a&_nc_ohc=Recpt915KfoAX_TmeaK&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdT6y59mnweRJhKLmEJ4e0IL4QUliaGiz_nUH1WjZB16nw&oe=649E27C9" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">原子少年</h5>
                   <p class="card-text">台灣選秀節目除了Ozone以外的其他出道團。</p>
@@ -102,7 +102,7 @@
           <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
               <div class="card h-100">
-                <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/349345031_165956396234360_7282154243250216323_n.jpg?stp=dst-jpg_s552x414&_nc_cat=111&ccb=1-7&_nc_sid=aee45a&_nc_ohc=MiqMN5Q_vCoAX9teHxt&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdQLbIebZN4ACja1Dm7Y_wKtg7_XmcCZvdgTFPx4weoUBQ&oe=649C4600" class="card-img-top" alt="...">
+                <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/349221704_648601447116597_1433548279907882897_n.jpg?stp=dst-jpg_p320x320&_nc_cat=106&ccb=1-7&_nc_sid=aee45a&_nc_ohc=kfDM8X5gvKIAX8zDZEK&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdTZrMUSv_7hSvk7Us-HISbpYwKBc4EKALHaOH9rkRw37w&oe=649E2D55" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">防彈少年團BTS</h5>
                   <p class="card-text">韓國男子團體，音樂風格多元。</p>
@@ -117,10 +117,9 @@
           <div class="card">
             <div class="card-body">
               小論文 | 同性與異性婚姻的差別 
-            <a href="https://drive.google.com/file/d/1tTHG3Aevc3j3yKJgs-akg4LQ5TGMPMVm/view?usp=sharing" target="_blank"><i class="fa-solid fa-file"></i></a>
             </div>
           </div>
-            <p>這是我高二時和當時的同學一起撰寫的小論文，主要探討同性婚姻與異性婚姻得到的權益相不相同，並與公民老師討論及修改，最後產出這篇小論文。</p>
+            <p>這是我高二時和當時的同學一起撰寫的小論文，主要探討同性婚姻與異性婚姻得到的權益相不相同，並與公民老師討論及修改，最後產出這篇小論文。我們發現在《民法》規範中，「財產關係制」方面，同性婚姻與異性婚姻受到的權益較為平等，反之「收養子女」層面卻是不平等;而在《醫療法》方面相關規定較為平等，自從同性婚姻法案通過後，即便是相同性別的另一半，同樣也能簽署同意書。</p>
           
           <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
@@ -129,86 +128,10 @@
                 <div class="card-body">
                   <h5 class="card-title"></h5>
                   <p class="card-text"></p>
+                  <a href="https://drive.google.com/file/d/1tTHG3Aevc3j3yKJgs-akg4LQ5TGMPMVm/view?usp=sharing" target="_blank" class="btn btn-primary">查看完整版論文</a>
                 </div>
               </div>
             </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/349223227_662728342358850_7785088859919316023_n.jpg?stp=dst-jpg_p320x320&_nc_cat=109&ccb=1-7&_nc_sid=aee45a&_nc_ohc=TfbPKgRGLXMAX_4fOjR&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdTHdEQ-TZdg-EtSI5qkyW-d930sMRBG0AiMip5W_-RQkg&oe=649AD925" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title"></h5>
-                  <p class="card-text"></p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/350270917_536567261815871_7529852538476789714_n.jpg?stp=dst-jpg_p320x320&_nc_cat=109&ccb=1-7&_nc_sid=aee45a&_nc_ohc=Ol6xK3jvsIYAX-CY47p&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdTYrrTU7FazApza1Ofjgu0zTccXwo8M5ntq_5f5V3boUg&oe=649AD267" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title"></h5>
-                  <p class="card-text"></p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col">
-              <div class="card h-100">
-                <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/350350902_257467493499217_2410469378247733172_n.jpg?stp=dst-jpg_p320x320&_nc_cat=110&ccb=1-7&_nc_sid=aee45a&_nc_ohc=JvK-NZMY3kEAX8SjsDn&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdRYUeScwHcPnQACsrsL7rfKZCIDXkHc1I9lrITY3cL3Og&oe=649AD1F2" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title"></h5>
-                  <p class="card-text"></p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/350361398_793621018780546_8197963184384792159_n.jpg?stp=dst-jpg_p320x320&_nc_cat=101&ccb=1-7&_nc_sid=aee45a&_nc_ohc=Y0HbAud1DMgAX8TrCn3&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdTEmaYulynKrrNaByBfexgigEw91rnyonPTrQ3y-YjXBQ&oe=649AE0A0" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title"></h5>
-                  <p class="card-text"></p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/349262945_585928947058466_955642957934171059_n.jpg?stp=dst-jpg_p320x320&_nc_cat=106&ccb=1-7&_nc_sid=aee45a&_nc_ohc=NfqqQv6gZU4AX9T_Qex&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdS4jltNvO3G_LU_4Q1KDUeLMXX6_IEZEtkA0K-vW5WGQw&oe=649AD53E" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title"></h5>
-                  <p class="card-text"></p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col">
-              <div class="card h-100">
-                <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/350361100_789734272687970_333083716251792255_n.jpg?stp=dst-jpg_p320x320&_nc_cat=105&ccb=1-7&_nc_sid=aee45a&_nc_ohc=ihCmGJg03DoAX9piwfy&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdRC5xALCySgYxihXFESYBZF_-Ng5-QbmjDcbZwyTOAOyg&oe=649AE2AF" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title"></h5>
-                  <p class="card-text"></p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/350087282_201147439531865_5252885700209305464_n.jpg?stp=dst-jpg_p320x320&_nc_cat=104&ccb=1-7&_nc_sid=aee45a&_nc_ohc=W0UgcqFfrsMAX9dER-J&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdROxcrSL5klV6hWuhTKy2P8CRRPVRpowQkX_wENyy8arQ&oe=649ACDE9" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title"></h5>
-                  <p class="card-text"></p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/350257759_103963849386400_826218426336255271_n.jpg?stp=dst-jpg_p320x320&_nc_cat=105&ccb=1-7&_nc_sid=aee45a&_nc_ohc=lkpqbqA6oh0AX-Nk81B&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdT2g0rPB45wuWs19P2Jwjvn2QPK7-9n8eqGqAvbmFyusg&oe=649AE44B" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title"></h5>
-                  <p class="card-text"></p>
-                </div>
-              </div>
-            </div>
-          </div>    
          </section>
           <br /><br />
         <!-- 數位策展 | 策展自己作品-->
@@ -216,10 +139,9 @@
           <div class="card">
             <div class="card-body">
               數位策展 | 策展自己作品
-              <a href="https://simplebooklet.com/GqEOvdifJcmQNEc2uDn3eY" target="_blank"><i class="fa-solid fa-user"></i></a>
             </div>
           </div>
-          <p>這是這學期數位內容策展的期中作業，老師要我們選擇一種線上策展工具來策展自己，我使用「Simplebooklet」這項工具來進行策展，裡面記錄了我高中時參加的活動，也同時記錄了成長的過程。</p>
+          <p>這是這學期數位內容策展的期中作業，我使用「Simplebooklet」這項工具來進行策展，裡面記錄了我高中時參加的活動，也同時記錄了成長的過程。</p>
           
           <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
@@ -228,76 +150,26 @@
                 <div class="card-body">
                   <h5 class="card-title">封面</h5>
                   <p class="card-text">我將這場展覽的名字訂為「關於成長這件事」，因為參與了這些活動，都讓我成長了不少，也累積了不同的經驗。</p>
+                  <a href="https://simplebooklet.com/GqEOvdifJcmQNEc2uDn3eY" target="_blank" class="btn btn-primary">查看完整作品</a>
                 </div>
               </div>
             </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/349294995_246736967960675_5213732705151375231_n.jpg?stp=dst-jpg_p320x320&_nc_cat=108&ccb=1-7&_nc_sid=aee45a&_nc_ohc=gG8BQ1BO56QAX8EKPn4&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdSkrSQIJ4Qi8-zmqhF7O68ZkpA9lGkLyGfHG71uqf5fsg&oe=649AF456" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">導覽資訊</h5>
-                  <p class="card-text">我將展覽分為三個部分，同時是我參與的三項活動。</p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/349056287_552926437034556_8857404715712735127_n.jpg?stp=dst-jpg_p320x320&_nc_cat=105&ccb=1-7&_nc_sid=aee45a&_nc_ohc=ZbEAZcYlkaAAX9JyYw9&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdRsjxyU35WqGk7Zz-cp6XnClLVYV9-SjDDswQUtgG5clw&oe=649ADAEF" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">導覽資訊</h5>
-                  <p class="card-text">每一個部分又將分享我從決定參加活動到活動後的省思。</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col">
-              <div class="card h-100">
-                <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/349235273_1420105582073461_6047486782431319927_n.jpg?stp=dst-jpg_p320x320&_nc_cat=110&ccb=1-7&_nc_sid=aee45a&_nc_ohc=KA8AFXSy1-cAX92oU7K&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdRP44Km4rs_URJlTUlr9gac-PzLV2MqN7UmZgj90KJ53A&oe=649AEDF3" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">導覽內容</h5>
-                  <p class="card-text">第一個是高一選修了「文創家政行銷」這門課。</p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/349207267_2438996839616927_8482517664879648257_n.jpg?stp=dst-jpg_p320x320&_nc_cat=102&ccb=1-7&_nc_sid=aee45a&_nc_ohc=QR_b1GYxBuEAX_naqZF&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdS0OeKLtzfY7reUmByq1jegTRiah1NeArt5IaiuecEdqA&oe=649AD954" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">導覽內容</h5>
-                  <p class="card-text">第二個是高一加入「科學探究社」社團。</p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/349222699_1358986411320520_6983855817652103714_n.jpg?stp=dst-jpg_p320x320&_nc_cat=105&ccb=1-7&_nc_sid=aee45a&_nc_ohc=kzUAE86q728AX8H4-pz&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdRdCrO0h0ADuynLDQCVOUKczu8eVVW-lhHbbsa2Xu8_zA&oe=649AEA44" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">導覽內容</h5>
-                  <p class="card-text">第三個是高三擔任國小六年級銜接課程志工。</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
               <div class="card h-100">
                 <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/349220238_774637844061656_231582776494935119_n.jpg?stp=dst-jpg_p320x320&_nc_cat=102&ccb=1-7&_nc_sid=aee45a&_nc_ohc=A2DLdcNjmxYAX999pxl&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdQJ1kaabNqCXKeWrkbNo9qpBUapw7yYccI93IMjF5sWVw&oe=649AF614" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">封底</h5>
-                  <p class="card-text">展覽結束</p>
+                  <p class="card-text">展覽結束。</p>
                 </div>
               </div>
             </div>
-          </div> 
-         </section>
+          </section>
           <br /><br />
         <!-- 科學專題實驗成果 | 記者會新聞影片-->
          <section class="con-sec" id="science">
           <div class="card">
             <div class="card-body">
               科學專題實驗成果 | 記者會新聞影片
-              <a href="https://www.youtube.com/watch?v=DthMuV2UrDQ" target="_blank"><i class="fa-solid fa-microphone"></i></a>
             </div>
           </div>
           <p>高一時，參加科學探究社，設計並進行實驗，我們發現檯燈光色對於閱讀清晰度幾乎沒有影響，但是對於閱讀安全度的影響很大，最後研究論文也通過審查並藉由記者會發表。</p>
@@ -308,6 +180,7 @@
                 <div class="card-body">
                   <h5 class="card-title">成果海報</h5>
                   <p class="card-text">這張海報說明我們的研究主題、過程分享及心得感想。</p>
+                  <a href="https://www.youtube.com/watch?v=DthMuV2UrDQ" target="_blank" class="btn btn-primary">查看記者會影片</a>
                 </div>
               </div>
             </div>
